--- a/templates/home.html
+++ b/templates/home.html
@@ -274,7 +274,7 @@
 	<div class="wndr_land_colosiusm">
 		
 	<div class="video-home-content">
-		<i class="fa fa-volume-off" id="audio-home-control" aria-hidden="true"></i>
+		<i class="fa fa-volume-up" id="audio-home-control" aria-hidden="true"></i>
 		<div class="circle" style="animation-delay: 0s"></div>
 		<div class="circle" style="animation-delay: 1s"></div>
 		<div class="circle" style="animation-delay: 2s"></div>
