--- a/templates/teams.html
+++ b/templates/teams.html
@@ -162,8 +162,8 @@
 						</div>
                         <div class="row teams_seprate_section">
                             <div class="col-12 col-sm-12 col-md-12">
-                                <p>A visionary whose entrepreneurial ventures lie at the intersection of technology, gaming, music, fashion and television. Inventor of 3DWEB technology powering AAA quality gaming. In 2009 he created the viral online web game “Wall Street Massacre: Murder Madoff.” The game became an instant success with 25 million game plays and fan clubs around the world. The success of this title spawned the vision behind WNDR.</p>
-                                <P>Borris’ detailed view of the big picture has led to engagements and activations with some of the world's leading brands, such as Time Warner Inc., Samsung, SONY Music, BMW Motorcycles, Nestle, and A&E Networks. With a history as an ignitor of pop culture moments and how to amplify them, Mr. Bazelais' plan for the future will be indelible -The delivery of the METAVERSE. .</P>
+                                <p>A visionary whose entrepreneurial ventures lie at the intersection of technology, gaming, music, fashion and television. Creator of the -WNDRVERSE and- 3-D Web technology powering AAA gaming. In 2009 he created the viral online web game “Wall Street Massacre: Murder Madoff.” The game became an instant success with 25 million game plays and fan clubs around the world. The success of this title spawned the vision behind WNDR.</p>
+                                <P>Borris’ detailed view of the big picture has led to engagements and activations with some of the world's leading brands, such as Time Warner Inc., Samsung, SONY Music, BMW Motorcycles, Nestle, and A&E Networks. With a history as an ignitor of pop culture moments and how to amplify them, Mr. Bazelais' plan for the future will be indelible -The delivery of the -open- metaverse.</P>
                             </div>
                         </div>
 						<div class="row">
@@ -195,6 +195,30 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-md-12 col-sm-6 srikant_div" >
+						<div class="member_teams">
+							<img class="tm-people" src="{% static 'img/srikant_img.jpg' %}" alt="">
+						</div>
+						<div class="team_member_section">
+						<div class="member_txt">
+							<div class="link-name d-flex justify-content-center">SHRIKANT</div>
+							{% comment %} <div class="link-position d-flex justify-content-center">COO</div> {% endcomment %}
+						</div>
+						<div class="row teams_seprate_section">
+							<div class="col-12 col-sm-12 col-md-12">
+								<p>A multi-faceted entrepreneur in his own right, Srikant Dash has extensive technology experience across multiple market sectors. Companies co-founded by Dash have developed next-generation technology solutions in the automotive space, real estate and medical industries. Dash’s unusual ability to navigate both the technical and creative aspects of the development process makes him uniquely qualified to bring the WNDR vision to life.
+								</p>
+								<p>His impressive list of accomplishments includes the development of a real-time VR game for Disney as a complement to a popular television show, the real-time implementation of magnetomotive ultrasound, a novel imaging technology for early cancer detection, and the successful introduction of VR technologies to the Indian automotive industry for companies like Honda, Mahindra, and Mercedes Benz. In recognition of his work in developing the first cloud rendering solution for 3D automotive visualization, Dash received the IDMA Gold medal award for Best Branded Content in 2021 for Renault Virtual showroom, one of India’s most prestigious awards for achievement in digital marketing.
+								</p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12 col-sm-12 col-md-12 link_txt_social ryght_brdr">
+								<p><a href="javascript:void(0);"><i class="fa fa-linkedin" aria-hidden="true"></i>Let's connect!</a></p>		
+							</div>
+						</div>
+					</div>
+				</div>
 					
 				</div>
 			
