--- a/templates/teams.html
+++ b/templates/teams.html
@@ -201,7 +201,7 @@
 						</div>
 						<div class="team_member_section">
 						<div class="member_txt">
-							<div class="link-name d-flex justify-content-center">SHRIKANT</div>
+							<div class="link-name d-flex justify-content-center">SRIKANT</div>
 							{% comment %} <div class="link-position d-flex justify-content-center">COO</div> {% endcomment %}
 						</div>
 						<div class="row teams_seprate_section">
