Change srikant position

--- a/templates/teams.html
+++ b/templates/teams.html
@@ -202,7 +202,7 @@
 						<div class="team_member_section">
 						<div class="member_txt">
 							<div class="link-name d-flex justify-content-center">SRIKANT</div>
-							{% comment %} <div class="link-position d-flex justify-content-center">COO</div> {% endcomment %}
+							 <div class="link-position d-flex justify-content-center">LEAD ARCHITECT | INTERIM CTO</div> 
 						</div>
 						<div class="row teams_seprate_section">
 							<div class="col-12 col-sm-12 col-md-12">
