--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11277,7 +11277,7 @@ img.blog-section-img-tabs {
     .banner-WNDR {
         display: flex;
         width: 100%;
-        height: 100%;
+        height: 540px;
         flex-direction: column;
     }
 
@@ -12617,12 +12617,8 @@ img.blog-section-img-tabs {
         padding-top: 20px;
     }
 
-    .banner-logo-div {
-        display: none;
-    }
-
     .banner-WNDR-outer {
-        top: 282px !Important;
+        top: 400px !Important;
     }
 }
 
@@ -13514,7 +13510,7 @@ img.blog-section-img-tabs {
     display: block !important;
 }
 .mobileportraitview {
-    display: none;
+    display: none !important;
 }
 /* 26 */
 }
@@ -13665,7 +13661,7 @@ img.blog-section-img-tabs {
     /* srikant css */
     /* 22 */
     .mobileportraitview {
-        display: none;
+        display: none !important;
     }
     /* 22 */
     .header-line-shadow img {
@@ -13964,7 +13960,10 @@ img.blog-section-img-tabs {
 }
 
 @media only screen and (max-width: 640px) {
-
+    
+    .banner-logo-div img {
+        display: block;
+    }
     /*headerpage start css*/
     /*header start*/
     .header_WNDR nav.navbar.navbar-expand-lg.navbar-light {
@@ -14190,6 +14189,16 @@ img.blog-section-img-tabs {
 }
 
 @media only screen and (max-width: 642px) {
+    .banner_video_section {
+        position: relative;
+        width: 100%;
+        height: 600px;
+    }
+    .banner-WNDR-outer {
+        top: 394px !Important;
+    }
+    
+    
     img.game-player-tabs {
         display: none;
     }
@@ -14273,6 +14282,9 @@ img.blog-section-img-tabs {
 }
 
 @media only screen and (max-width: 575px) {
+    .banner-WNDR { 
+        height: auto; 
+    }
     .no-dwonload_section img {
         padding-top: 5px;
     }
@@ -14618,7 +14630,7 @@ img.blog-section-img-tabs {
     }
 
     .banner-WNDR-outer {
-        top: 464px !Important;
+        top: 354px !Important;
     }
 
     .cmpny-bg::after {
@@ -14798,10 +14810,6 @@ img.blog-section-img-tabs {
     }
 
     .banner-WNDR img.banner-img-bg-tabs {
-        display: none;
-    }
-
-    .banner-logo-div {
         display: none;
     }
 
