--- a/templates/base.html
+++ b/templates/base.html
@@ -62,17 +62,17 @@
                <img src="{% static 'image/banner_img-tabs.jpg' %}" class="banner-img-bg-tabs" alt="banner-img1">
                <img src="{% static 'image/banner_img-mobile.jpg' %}" class="banner-img-bg-mobile" alt="banner-img2">
            </div>
- 
+           <!-- image/banner_img.jpg' -->
            <div class="banner_video_section">
                <video class="banner_desktop_video" id="video2" width="100%" height="100%" preload='none'
-                   poster="{% static 'image/banner_img.jpg' %}" autoplay muted loop playsinline onclick="return false">
+                   poster="{% static 'image/desktop_video_image_onpreload.png' %}" autoplay muted loop playsinline onclick="return false">
                    <source id="vid2_source"
                        src="{% if video_obj %}{{video_obj.desktop_top_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/PC_version_10mbps.mp4 {%endif%}"
                        type="video/mp4">
                    <!-- "{% static 'video/PC_version_10mbps_VP8.webm' %}" -->
                </video>
                <video class="banner_mobile_video" id="video21" width="100%" height="100%" preload='none'
-                   poster="{% static 'image/banner_img.jpg' %}" autoplay muted loop playsinline onclick="return false">
+                   poster="{% static 'image/mobile_video_image_onload.png' %}" autoplay muted loop playsinline onclick="return false">
                    <source id="vid21_source"
                        src="{% if video_obj %}{{video_obj.mobile_top_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/Mobile_10mbps.mp4{%endif%}"
                        type="video/mp4">
