--- a/templates/teams.html
+++ b/templates/teams.html
@@ -162,7 +162,7 @@
 						</div>
                         <div class="row teams_seprate_section">
                             <div class="col-12 col-sm-12 col-md-12">
-                                <p>A visionary whose entrepreneurial ventures lie at the intersection of technology, gaming, music, fashion and television. Creator of the WNDRVERSE and 3-D Web technology powering AAA gaming. In 2009 he created the viral online web game “Wall Street Massacre: Murder Madoff.” The game became an instant success with 25 million game plays and fan clubs around the world. The success of this title spawned the vision behind WNDR.</p>
+                                <p>A visionary whose entrepreneurial ventures lie at the intersection of technology, gaming, music, fashion and television. Creator of the WNDRVERSE and 3-D Web technology powering AAA gaming. In 2009 he produced the viral online web game “Wall Street Massacre: Murder Madoff.” The game became an instant success with 25 million game plays and fan clubs around the world. The success of this title spawned the vision behind WNDR.</p>
                                 <P>Borris’ detailed view of the big picture has led to engagements and activations with some of the world's leading brands, such as Time Warner Inc., Samsung, SONY Music, BMW Motorcycles, Nestle, and A&E Networks. With a history as an ignitor of pop culture moments and how to amplify them, Mr. Bazelais' plan for the future will be indelible, the delivery of the open metaverse.</P>
                             </div>
                         </div>
