--- a/templates/home.html
+++ b/templates/home.html
@@ -285,8 +285,9 @@
 				<video id="myVideo" style="object-fit:cover;background-position: bottom center;" class="video video_desktop_home fullscr" width="100%" height="100%" preload='auto'  poster="" controlslist="nodownload noplaybackrate">
 				<source src="{% if video_obj %}{{video_obj.desktop_bottom_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4{%endif%}" type="video/mp4" ></video>
 			 <video id="myVideo2" class="video_mbl_home fullscr-mobile " width="100%" height="100%" preload='auto' poster="{% static 'image/game-player_mbl.png' %}" controlslist="nodownload noplaybackrate" style="object-fit:cover;background-position: bottom center;" webkit-playsinline="true" playsinline="true">
-			
-					<source src="{% if video_obj %}{{video_obj.mobile_bottom_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4{%endif%}" type="video/mp4"></video>
+				{% comment %} {%else%}https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4{%endif%}"  {% endcomment %}
+				{% comment %} <source src="{% if video_obj %}{{video_obj.mobile_bottom_video}}{%else%}https://wndr.nyc3.digitaloceanspaces.com/WNDR%20TRAILER.mp4{%endif%} {% endcomment %}
+					<source src="{% static "video/Gameplay_trailer_mobile_version.mp4" %}" type="video/mp4"></video>
 				</video>
 				<i class="fa-solid fa-expand " id="fullscreenhide_in_mobile" onclick="openFulldesktop();"></i>				
 			
@@ -314,7 +315,7 @@
 					<div class="gamePlayer-logo-item">
 						<img src="{% static 'image/gamePlayer-logo.png' %}" class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 600; repeat: true" alt="gamePlayer-logo-1">
 						<div class="gamePlayer-contect">
-							<p class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 800; repeat: true">THE COLOSIUM</p>
+							<p class="uk-scrollspy-inview" uk-scrollspy="cls: uk-animation-slide-top; delay: 800; repeat: true">THE COLOSSEUM</p>
 						</div>
 					</div>
 					<div class="play-btn-outer">
