add last name to srikant

--- a/templates/teams.html
+++ b/templates/teams.html
@@ -180,7 +180,7 @@
 							<div class="team_member_section">
 							<div class="member_txt">
 								<div class="link-name d-flex justify-content-center">JOSH POWE</div>
-								<div class="link-position d-flex justify-content-center">COO</div>
+								<div class="link-position d-flex justify-content-center">BOARD ADVISOR | INVESTOR</div>
 							</div>
                             <div class="row teams_seprate_section">
                                 <div class="col-12 col-sm-12 col-md-12">
@@ -201,7 +201,7 @@
 						</div>
 						<div class="team_member_section">
 						<div class="member_txt">
-							<div class="link-name d-flex justify-content-center">SRIKANT</div>
+							<div class="link-name d-flex justify-content-center">SRIKANT DASH</div>
 							 <div class="link-position d-flex justify-content-center">LEAD ARCHITECT | INTERIM CTO</div> 
 						</div>
 						<div class="row teams_seprate_section">
