--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4176,7 +4176,7 @@ img.space-contact1 {
     display: flex;
     width: 100%;
     gap: 130px;
-    justify-content: space-between;
+    justify-content: center;
     margin-right: 0px !important;
     max-width: 100% !important;
 }
